--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <meta name="description"
+    content="Streamline animal adoptions with our user-friendly website. Our platform empowers shelter staff to easily manage and update the adoption listings, connecting potential adopters with lovable animals">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy tails</title>
 </head>
