Add showLoading and hideLoading action creator in useUser hook

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="preconnect" href="https://leticia-avaca-final-project-back-202304.onrender.com">
+  <link rel="preconnect" crossorigin href="https://leticia-avaca-final-project-back-202304.onrender.com">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <meta name="description"
     content="This is an animal adoption website. Shelter staff can easily manage and update the adoption listings, connecting potential adopters with lovable animals">
